Started initial UI work on home_frag

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -2,18 +2,21 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-            android:id="@+id/navigation_home"
-            android:icon="@drawable/ic_home_black_24dp"
-            android:title="@string/title_home"/>
+            android:id="@+id/navigation_bal"
+            android:orderInCategory="1"
+            android:icon="@drawable/analytics"
+            android:title="@string/analytics"/>
 
     <item
-            android:id="@+id/navigation_bal"
-            android:icon="@drawable/ic_dashboard_black_24dp"
-            android:title="@string/title_spend"/>
+            android:id="@+id/navigation_home"
+            android:orderInCategory="2"
+            android:icon="@drawable/home"
+            android:title="@string/home"/>
 
     <item
             android:id="@+id/navigation_transactions"
-            android:icon="@drawable/ic_notifications_black_24dp"
-            android:title="@string/title_transactions"/>
+            android:orderInCategory="3"
+            android:icon="@drawable/transaction"
+            android:title="@string/transactions"/>
 
 </menu>
