--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
+    <color name="colorPrimary">#DE959F</color>
     <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#8358EF</color>
+
+    <color name="transparent">@android:color/transparent</color>
+
+    <color name="appBackground">#000000</color>
+
+    <color name="cardViewBackground">#292929</color>
+    <color name="cardViewSecondaryBackground">#116CD5</color>
+    <color name="cardViewTertiaryBackground">#FFFFFF</color>
+
+
+    <color name="bottomAppBarBackground">#17283C</color>
+    <color name="bottomAppBarItemSelected">#64BED0</color>
+    <color name="bottomAppBarItemUnselected">#526174</color>
+
+
+    <color name="textColor">#FFFFFF</color>
+    <color name="secondaryTextColor">#99D8FE</color>
+    <color name="tertiaryTextColor">#a4a4a4</color>
+
 </resources>
